--- a/crystal-game/res/values/strings.xml
+++ b/crystal-game/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Crystal Game</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_gps">GpsActivity</string>
 
 </resources>
