--- a/crystal-game/res/values/strings.xml
+++ b/crystal-game/res/values/strings.xml
@@ -5,5 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_gps">GpsActivity</string>
+    <string name="pref_default_server_address">example.com</string>
+    <string name="pref_server_address_name">Server address</string>
+    <string name="pref_default_port">3000</string>
+    <string name="pref_port_name">Port</string>
+    <string name="SERVER_ADDRESS">server_address</string>
+    <string name="PORT">port</string>
 
 </resources>
