item_scatter_on_server_site

--- a/crystal-game/res/values/strings.xml
+++ b/crystal-game/res/values/strings.xml
@@ -15,7 +15,8 @@
     <string name="CRYSTL">Crystal</string>
     <string name="MAGIC_ITEM">Magic</string>
     <string name="ENERGY">Energy</string>
-    
+
     <string name="title_activity_data_warehouse_test">DataWarehouseTestActivity</string>
 
+	<string name="NameHint">player name</string>
 </resources>
