--- a/crystal-game/res/values/strings.xml
+++ b/crystal-game/res/values/strings.xml
@@ -27,5 +27,10 @@
     <string name="select_player">Select the other player</string>
     <string name="title_activity_group_lobby">GroupLobbyActivity</string>
     <string name="request_game_start">Request game start</string>
-	<string name="NameHint">player name</string>
+    <string name="NameHint">player name</string>
+    <string name="reset_game_info">Game settings cleared</string>
+    <string name="action_save_boundary">Save</string>
+    <string name="choose_character_button_label">Choose</string>
+    <string name="title_activity_character_selection">Choose Character</string>
+
 </resources>
